# respol

./: README  README.FLAGS  README.md
examples/: CMakeLists.txt  compute_ch.cpp  generate_points.cpp  genfiles.sh  lrs_functions.c  parse_input.cpp  res_enum_d.cpp  res_enum_d_notopcom.cpp  res_enum_d_rand.cpp  test_lrs.cpp  triangulation_hash.cpp  triangulation_no_hash.cpp  tropli_disc.cpp  tropli_disc_modif.cpp
examples/inputs/: CH_points_4.tmp  all_points_4.tmp  cayley.tmp  cayley4.tmp  cayley4_small.tmp  cayley4_special.tmp  cubic_ternary_form.txt  example_disc_3.txt  input19_0  input41_1  input490_9  u_resultant.tmp
examples/inputs/n3/: input13_0  input15_0  input18_0  input21_0  input31_0  input32_0  input37_0  input39_0  input41_0  input42_0  input45_0
examples/inputs/n4/: input13_0  input16_0  input18_0  input21_0  input22_0  input23_0  input24_0  input25_0  input27_0
examples/inputs/old_tests/: input10_0  input11_0  input12_0  input14_0  input20_0  input22_0  input28_0  input34_0  input46_0  input47_0
examples/inputs/yu_jensen/: a.tmp  c.tmp  d.tmp  f.tmp  h.tmp  i.tmp  k.tmp
experimental/: bird.cpp
experiments/: files  maple_ch.mpl  maple_ch_output.txt  my-plot.ps  random_support_generator.py  run_experiments.py  run_experiments6.py  run_experiments_surfaces.py  run_experiments_with_polymake.py  topcom_cayley.txt  triang_run_experiments.py
experiments/aug_new_results/: random_d3_sparse.txt  random_d4_sparse.txt  random_d5_sparse.txt
experiments/d6/: input14_0  input14_1  input14_2  input14_3  input14_4  input15_0  input15_1  input15_2  input15_3  input15_4  input16_0  input16_1  input16_2  input16_3  input16_4  input17_0  input17_1  input17_2  input17_3  input17_4  input18_0  input18_1  input18_2  input18_3  input18_4  input19_0  input19_1  input19_2  input19_3  input19_4  input20_0  input20_1  input20_2  input20_3  input20_4  input21_0  input21_1  input21_2  input21_3  input21_4  (+115 more)
experiments/d7/: input15_0  input15_1  input15_2  input15_3  input15_4  input16_0  input16_1  input16_2  input16_3  input16_4  input17_0  input17_1  input17_2  input17_3  input17_4  input18_0  input18_1  input18_2  input18_3  input18_4  input19_0  input19_1  input19_2  input19_3  input19_4  input20_0  input20_1  input20_2  input20_3  input20_4  input21_0  input21_1  input21_2  input21_3  input21_4  input22_0  input22_1  input22_2  input22_3  input22_4  (+110 more)
experiments/d8/: input16_0  input16_1  input16_2  input16_3  input16_4  input17_0  input17_1  input17_2  input17_3  input17_4  input18_0  input18_1  input18_2  input18_3  input18_4  input19_0  input19_1  input19_2  input19_3  input19_4  input20_0  input20_1  input20_2  input20_3  input20_4  input21_0  input21_1  input21_2  input21_3  input21_4  input22_0  input22_1  input22_2  input22_3  input22_4  input23_0  input23_1  input23_2  input23_3  input23_4  (+105 more)
experiments/d9/: input17_0  input17_1  input17_2  input17_3  input17_4  input18_0  input18_1  input18_2  input18_3  input18_4  input19_0  input19_1  input19_2  input19_3  input19_4  input20_0  input20_1  input20_2  input20_3  input20_4  input21_0  input21_1  input21_2  input21_3  input21_4  input22_0  input22_1  input22_2  input22_3  input22_4  input23_0  input23_1  input23_2  input23_3  input23_4  input24_0  input24_1  input24_2  input24_3  input24_4  (+100 more)
experiments/figs/: dimensions.ps  impl_ures_dense_sparse.ps  time_Res_vertices_3.ps  time_Res_vertices_4.ps  time_Res_vertices_5.ps
experiments/gnuplot_scripts/: my-plot.ps  plot_3.p  plot_3_4_5.p  plot_ch_cube.p  plot_conv_hulls_3.p  plot_conv_hulls_4.p  plot_conv_hulls_5.p  plot_gfan_d4.p  plot_gfan_d5.p  plot_results.p  plot_script_det_ratio.p
experiments/new_results/: arbitrary_proj_n3_m5.txt  arbitrary_proj_n3_m5.txtcd  arbitrary_proj_n3_m6.txt  arbitrary_proj_n3_m7.txt  arbitrary_proj_n4_m6.txt  random_d3_dense.txt  random_d3_dense_without_hash.txt  random_d3_sparse.txt  random_d3_sparse_up2_40.txt  random_d3_ures_dense.txt  random_d3_ures_sparse.txt  random_d4_sparse.txt  random_d4_ures_dense.txt  random_d4_ures_sparse.txt  random_d5_sparse.txt
experiments/new_results_W/: random_d3_dense.txt  random_d3_sparse.txt  random_d3_sparse_10_45.txt  random_d3_ures_dense.txt  random_d4_sparse.txt  random_d5_sparse.txt
experiments/restricted_hi/: input17_0
experiments/results/: random_d3_dense.txt  random_d3_sparse.txt  random_d4_dense.txt  random_d4_sparse.txt
experiments/results_convex_hulls/: random_d3_sparse.txt  random_d4_sparse.txt  random_d5_sparse.txt
experiments/results_gfan_d4/: out_gfan1.txt  out_gfan2.txt  out_hash.txt  out_nohash.txt
experiments/results_gfan_d5/: out_gfan_d5_2.txt  out_hash_d5.txt  out_nohash_d5.txt
experiments/triang_experiments/: random_cube_4_hash.txt  random_cube_hash.txt
include/: .cgal_chd_hornus_cellinfo.h.swp  .fast_hashed_determinant.h.swp  bird.h  cgal_chd.h  cgal_chd_hornus.h  cgal_chd_hornus_cellinfo.h  cgal_chd_hornus_old.h  cgal_chd_hornus_with_cgal_det.h  cgal_chd_notopcom.h  fast_hashed_determinant.h  fast_hashed_determinant_fixed_dimension.h  fast_hashed_determinant_impl.h  fast_orientation.h  hashed_determinant.h  hashed_determinant_base.h  hashed_determinant_base_impl.h  hashed_determinant_bird.h  hashed_determinant_cgal.h  hashed_determinant_cgal_2.h  hashed_determinant_eigen.h  hashed_determinant_impl.h  hashed_determinant_laplace.h  hashed_determinant_linbox.h  hashed_determinant_orientation.h  lrs_cgal.h  lrs_functions.h  node.h  node_impl.h  normal_set_ds.h  normal_vector_ds.h  parse_functions.h  print_functions.h  randomized_res.h  res_enum_functions.h  respol_config.h  simplices_augmentation.h  sort_swap.h  trie.h  trie_impl.h
include/_OLD/: cgal_chd.h  cgal_chd_hornus.h  cgal_chd_hornus_old.h  cgal_chd_hornus_with_cgal_det.h
respol/: CMakeLists.txt  res_enum_d.cpp  test_suite.cpp
respol/discriminant_examples/: cubic_quaternary_form.txt  example2mega.txt  example3disc.txt
test/: bird.cpp  compare.sh  filter_hash_output.pl  run_test_varying_n.sh  test_hashed_determinant_speed.cpp  test_matrix.cpp  triangulation_hash.cpp  triangulation_no_hash.cpp
(+2191 files in other folders)
